# BlackTeaSpeak

./: .gitignore  .gitmodules  README.md  check_case.js  docker-compose.yml  fetch_logs.js  fix_mermaid.py  generate_docs.py  generate_docs_pt2.py  implementation_plan.md  jobs.json  jobs_desktop.json  process_logos.py  runs.json  server-control-panel.bat  server-control-panel.ps1  smoke-upload-2.txt  start-all.bat  start-all.ps1  start-client.bat  start-client.ps1  start-server.bat  start-server.ps1  stop-all.bat  stop-all.ps1  stop-client.bat  stop-client.ps1  stop-server.bat  stop-server.ps1  test_parser.js
BlackTeaSpeak-Client/src-tauri/: Cargo.toml  client_config.json  tauri.conf.json
BlackTeaSpeak-Server/: Cargo.toml  Dockerfile  README.md  build_errors.txt  decode_chain.rs  decrypt_lic.cpp  errors.json  errors.txt  output.txt  patch_db.py  patch_perms.py  patch_perms2.py  protocol_key.txt  scratch_base64_prv.py  scratch_brute_decrypt.py  scratch_brute_decrypt_key.py  scratch_check_license_header.py  scratch_check_main.py  scratch_check_mt.py  scratch_check_seed_114.py  scratch_compare_root_keys.py  scratch_decode_chain.py  scratch_decrypt_brute.py  scratch_decrypt_correct.py  scratch_decrypt_final.py  scratch_decrypt_new.py  scratch_decrypt_old_seed.py  scratch_decrypt_robust.py  scratch_decrypt_v1.py  scratch_decrypt_v2_scan.py  scratch_decrypt_with_first_intermediate.py  scratch_decrypt_with_header_seed.py  scratch_diff_all.py  scratch_diff_key2.py  scratch_dissect_unencrypted_key.py  scratch_dump_data.py  scratch_dump_field1.py  scratch_dump_field1_nested.py  scratch_dump_field2.py  scratch_dump_field2_ascii.py  (+99 more)
BlackTeaSpeak-Server/BlackTeaWeb/: .gitignore  ChangeLog.md  README.md  detailed-build-warnings-extract.txt  file.ts  final-warning-extract.txt  package-lock.json  package.json  react-legacy-compat.d.ts  setup_devel_environment.md  tsbaseconfig.json  tsconfig.json  webpack-client.config.ts  webpack-web.config.ts  webpack.config.ts
BlackTeaSpeak-Server/data/: runtime-state.json
BlackTeaSpeak-Server/scripts/: New-ServerAdminPrivilegeKey.ps1  generate_foundation.py  start.bat  stop.bat
BlackTeaSpeak-Server/src/: database.rs  desktop_capture.rs  desktop_crypto.rs  desktop_handler.rs  desktop_proto.rs  desktop_proto_broken.rs  desktop_session.rs  desktop_tcp_transport.rs  desktop_transport.rs  file_transfer.rs  lib.rs  main.rs  models.rs  query.rs  rtc_manager.rs  runtime.rs  specs.rs  ssh_query.rs  state.rs  teaspeak_tcp_transport.rs  test_eax.rs  (+4 more)
(+424 files in other folders)
