[package]
name = "blackteaspeak_server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
axum = "0.8.9"
base64 = "0.22"
hyper = { version = "1", features = ["http1", "server"] }
hyper-util = { version = "0.1", features = ["service", "tokio"] }
rcgen = "0.13"
rustls = { version = "0.23", features = ["ring"] }
rustls-pemfile = "2.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha1 = "0.10"
sha2 = "0.10"
tokio = { version = "1", features = ["rt-multi-thread", "net", "sync", "time"] }
tokio-rustls = "0.26"
tower-http = { version = "0.6.11", features = ["fs"] }
tungstenite = "0.24"
p256 = { version = "0.13", features = ["ecdh", "ecdsa"] }
rand = "0.8"
aes = "0.6"
eax = "0.3"
hex = "0.4.3"
rtp = "0.17.1"
ed25519-dalek = "2.2.0"
curve25519-dalek = "4.1.3"
x25519-dalek = "2.0.1"
rusqlite = { version = "0.39.0", features = ["bundled"] }
bytes = "1.11.1"
wtransport = "0.7.1"
russh = "0.61.1"
russh-keys = "0.49.2"
rand_core = "0.6"
