[package]
name = "tauri-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
x25519-dalek = "2.0.1"
sha2 = "0.11.0"
tokio = { version = "1.52.3", features = ["full"] }
aes = "0.6"
eax = "0.3"
rand = "0.8.5"
ed25519-dalek = { version = "2.2.0", features = ["rand_core"] }
base64 = "0.22.1"
sha1 = "0.11.0"
uuid = { version = "1.23.1", features = ["v4"] }
cpal = "0.17.3"
audiopus = "0.2.0"
ringbuf = "0.5.0"
tauri-plugin-global-shortcut = "2.3.1"
reqwest = { version = "0.13.3", features = ["rustls", "stream"] }
tauri-plugin-http = { version = "2.5.9", features = ["dangerous-settings"] }
ureq = "3.3.0"
rustls = { version = "0.23.40", features = ["ring"] }
nnnoiseless = "0.5.2"

